--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@types/react-dom": "^18.2.14",
     "axios": "^1.6.0",
     "buffer": "^6.0.3",
+    "formik": "^2.4.5",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "react-spotify-auth": "^1.4.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
