--- a/package.json
+++ b/package.json
@@ -1,34 +1,41 @@
 {
   "name": "spotlist",
   "version": "0.1.0",
+  "author": "Gustavo dos Anjos",
   "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.17",
-    "@reduxjs/toolkit": "^1.9.7",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.60",
     "@types/react": "^18.2.36",
-    "@types/react-dom": "^18.2.14",
+    "@types/react-dom": "^18.2.14"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@mui/material": "^5.14.17",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
-    "buffer": "^6.0.3",
-    "qs": "^6.11.2",
+    "i18next": "^23.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-i18next": "^13.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "tss-react": "^4.9.3",
+    "typescript": "^4.9.5",
+    "yup": "^1.3.2"
   },
   "eslintConfig": {
     "extends": [
