--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -34,7 +35,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "tss-react": "^4.9.3",
-    "typescript": "^4.9.5",
+    "typescript": "^5.3.3",
     "yup": "^1.3.2"
   },
   "eslintConfig": {
